--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Sobics</title>
+    <link rel="stylesheet" href="style.css">
     <script src="jquery/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
-<div id="game_area"></div>
+<div id="game_area">
+    <div id="time_bar"></div>
+</div>
 </body>
 </html>
