Player movement and initial block generation

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
     <script src="script.js"></script>
 </head>
 <body>
-<div id="game_area">
+<div id="app">
     <div id="time_bar"></div>
+    <div id="game_area"></div>
 </div>
 </body>
 </html>
