--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,8 @@
     <div id="time_bar"></div>
     <div id="game_area"></div>
 </div>
+<audio id="music" autoplay controls loop>
+    <source src="../assets/Music.mp3" type="audio/mpeg">
+</audio>
 </body>
 </html>
